--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
                                     <a href="/">
-                                        CAP
+                                        CAP LOGO
                                         {% comment %} <img src="{% static 'assets/img/logo/logo' %}" alt=""> {% endcomment %}
                                     </a>
                                 </div>
@@ -119,14 +119,14 @@
                                 <!-- logo -->
                                 <div class="footer-logo mb-25">
                                     <a href="/">
-                                        <img src="{% static 'assets/img/logo/logo2_footer.png' %}" alt="">
+                                        <img src="#" alt="Footer Logo">
                                     </a>
                                 </div>
                                 
                                 <!-- social -->
                                 <div class="footer-social mt-50">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
                                     <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                 </div>
                             </div>
@@ -135,14 +135,14 @@
                         <div class="col-xl-2 col-lg-2 col-md-4 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Company</h4>
-                                    <ul>
+                                    {% comment %} <h4>Company</h4> {% endcomment %}
+                                    {% comment %} <ul>
                                         <li><a href="#">Why choose us</a></li>
                                         <li><a href="#"> Review</a></li>
                                         <li><a href="#">Customers</a></li>
                                         <li><a href="#">Blog</a></li>
                                         <li><a href="#">Carrier</a></li>
-                                    </ul>
+                                    </ul> {% endcomment %}
                                 </div>
                             </div>
                         </div>
@@ -150,13 +150,13 @@
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
                                     <h4>Quick link</h4>
-                                    <ul>
+                                    {% comment %} <ul>
                                         <li><a href="#">Why choose us</a></li>
                                         <li><a href="#"> Review</a></li>
                                         <li><a href="#">Customers</a></li>
                                         <li><a href="#">Blog</a></li>
                                         <li><a href="#">Carrier</a></li>
-                                    </ul>
+                                    </ul> {% endcomment %}
                                 </div>
                             </div>
                         </div>
@@ -164,13 +164,13 @@
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
                                     <h4>Support</h4>
-                                    <ul>
+                                    {% comment %} <ul>
                                         <li><a href="#">Technology</a></li>
                                         <li><a href="#">  Products</a></li>
                                         <li><a href="#">Customers</a></li>
                                         <li><a href="#">Quality</a></li>
                                         <li><a href="#">Sales geography</a></li>
-                                    </ul>
+                                    </ul> {% endcomment %}
                                 </div>
                             </div>
                         </div>
