--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -96,7 +96,9 @@
         <header id="header" class="header">
             <div class="top-left">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="{% url 'accreditors:dashboard' %}"><img src="{% static 'layouts/images/logo.png' %}" alt="Logo"></a>
+                    <a class="navbar-brand" href="{% url 'accreditors:dashboard' %}">
+                        <img src="#" alt="CAP Logo">
+                    </a>
                     <a class="navbar-brand hidden" href="{% url 'accreditors:dashboard' %}"><img src="{% static 'layouts/images/logo2.png' %}" alt="Logo"></a>
                     <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
                 </div>
