--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -123,7 +123,9 @@
                                         </tbody>
                                     </table>
                                 {% else %}
-                                    <p>No applications found.</p>
+                                    <div>
+                                        <p>No applications found.</p>
+                                    </div>
                                 {% endif %}
                             </div> <!-- /.table-stats -->
                         </div>
