--- a/templates/index.html
+++ b/templates/index.html
@@ -78,69 +78,18 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-6">
+            <div class="col-lg-8 col-md-8 col-sm-10">
                 <div class="single-cat">
                     <div class="cat-icon">
                         <img src="assets/img/icon/services1.svg" alt="">
                     </div>
                     <div class="cat-cap">
-                        <h5><a href="#">Employee Owned</a></h5>
-                        <p>Supercharge your WordPress hosting with detailed website analytics, marketing tools.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-cat">
-                    <div class="cat-icon">
-                        <img src="assets/img/icon/services2.svg" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="#">Commitment to Security</a></h5>
-                        <p>Supercharge your WordPress hosting with detailed website analytics, marketing tools.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-cat">
-                    <div class="cat-icon">
-                        <img src="assets/img/icon/services3.svg" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="#">Passion for Privacy</a></h5>
-                        <p>Supercharge your WordPress hosting with detailed website analytics, marketing tools.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-cat">
-                    <div class="cat-icon">
-                        <img src="assets/img/icon/services4.svg" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="#">Employee Owned</a></h5>
-                        <p>Supercharge your WordPress hosting with detailed website analytics, marketing tools.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-cat">
-                    <div class="cat-icon">
-                        <img src="assets/img/icon/services5.svg" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="#">24/7 Support</a></h5>
-                        <p>Supercharge your WordPress hosting with detailed website analytics, marketing tools.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <div class="single-cat">
-                    <div class="cat-icon">
-                        <img src="assets/img/icon/services6.svg" alt="">
-                    </div>
-                    <div class="cat-cap">
-                        <h5><a href="#">100% Uptime Guaranteed</a></h5>
-                        <p>Supercharge your WordPress hosting with detailed website analytics, marketing tools.</p>
+                        <h5><a href="#">Background</a></h5>
+                        <p>
+                            Lagos State is introducing the Certified Accreditor Programme as part of the reforms to restore confidence in the building construction industry by ensuring that all building construction projects within the state are adequately monitored by Certified Accreditors - professionals with proven capabilities and requisite experience. Building construction accreditation, as encapsulated in the Certified Accreditor Programme, will be carried out by these private-sector professionals duly registered with the respective bodies. 
+
+                            These Certified Accreditors would assess the relevant designs/drawings contained in each application and thereafter approve the drawings, undertake site inspections, issue authorisation for work to proceed, and certification for work stages satisfactorily completed. It is important to note that these Certified Accreditors are not site supervisors, and the site inspections carried out do 
+                        </p>
                     </div>
                 </div>
             </div>
@@ -166,20 +115,23 @@
                 <div class="single-card text-center mb-30">
                     <div class="card-top">
                         <img src="assets/img/icon/price1.svg" alt="">
-                        <h4>Grade 1</h4>
+                        <h4>GRADE 1 Accreditors</h4>
                     </div>
                     {% comment %} <div class="card-mid">
                         <h4>$4.67 <span>/ month</span></h4>
                     </div> {% endcomment %}
                     <div class="card-bottom">
                         <ul>
-                            <li>2 TB of space</li>
-                            <li>unlimited bandwidth</li>
-                            <li>full backup systems</li>
-                            <li>free domain</li>
-                            <li>unlimited database</li>
+                            <li>Minimum of 6 Professionals </li>
+                            <li>Registered architect</li>
+                            <li>Registered civil/structural engineer</li>
+                            <li>Registered mechanical engineer</li>
+                            <li>Registered electrical engineer</li>
+                            <li><small>
+                                <strong>Minimum of 10 years post professional registration</strong></small>
+                            </li>
                         </ul>
-                        <a href="#" class="borders-btn">Get Started</a>
+                        <a href="{% url 'accreditors:create_account' %}" class="borders-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -187,7 +139,7 @@
                 <div class="single-card text-center mb-30">
                     <div class="card-top">
                         <img src="assets/img/icon/price2.svg" alt="">
-                        <h4>Grade 2</h4>
+                        <h4>Grade 2 Accreditors </h4>
                         {% comment %} <p>Starting at</p> {% endcomment %}
                     </div>
                     {% comment %} <div class="card-mid">
@@ -195,13 +147,16 @@
                     </div> {% endcomment %}
                     <div class="card-bottom">
                         <ul>
-                            <li>2 TB of space</li>
-                            <li>unlimited bandwidth</li>
-                            <li>full backup systems</li>
-                            <li>free domain</li>
-                            <li>unlimited database</li>
+                            <li>Minimum of 5 Professionals</li>
+                            <li>Registered architect</li>
+                            <li>Registered civil/structural engineer</li>
+                            <li>Registered mechanical engineer</li>
+                            <li>Registered electrical engineer</li>
+                            <li><small>
+                                <strong>Minimum of 10 years post professional registration</strong></small>
+                            </li>
                         </ul>
-                        <a href="#" class="borders-btn">Get Started</a>
+                        <a href="{% url 'accreditors:create_account' %}" class="borders-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -209,7 +164,7 @@
                 <div class="single-card text-center mb-30">
                     <div class="card-top">
                         <img src="assets/img/icon/price3.svg" alt="">
-                        <h4>Grade 3</h4>
+                        <h4>Grade 3 Accreditors</h4>
                         {% comment %} <p>Starting at</p> {% endcomment %}
                     </div>
                     {% comment %} <div class="card-mid">
@@ -217,13 +172,16 @@
                     </div> {% endcomment %}
                     <div class="card-bottom">
                         <ul>
-                            <li>2 TB of space</li>
-                            <li>unlimited bandwidth</li>
-                            <li>full backup systems</li>
-                            <li>free domain</li>
-                            <li>unlimited database</li>
+                            <li>Minimum of 4 Professionals</li>
+                            <li>Registered architect</li>
+                            <li>Registered civil/structural engineer</li>
+                            <li>Registered mechanical engineer</li>
+                            <li>Registered electrical engineer</li>
+                            <li><small>
+                                <strong>Minimum of 8 years post professional registration</strong></small>
+                            </li>
                         </ul>
-                        <a href="#" class="borders-btn">Get Started</a>
+                        <a href="{% url 'accreditors:create_account' %}" class="borders-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -231,7 +189,7 @@
                 <div class="single-card text-center mb-30">
                     <div class="card-top">
                         <img src="assets/img/icon/price3.svg" alt="">
-                        <h4>Grade 4</h4>
+                        <h4>Grade 4 Accreditors </h4>
                         {% comment %} <p>Starting at</p> {% endcomment %}
                     </div>
                     {% comment %} <div class="card-mid">
@@ -239,13 +197,16 @@
                     </div> {% endcomment %}
                     <div class="card-bottom">
                         <ul>
-                            <li>2 TB of space</li>
-                            <li>unlimited bandwidth</li>
-                            <li>full backup systems</li>
-                            <li>free domain</li>
-                            <li>unlimited database</li>
+                            <li>Minimum of 4 Professionals</li>
+                            <li>Registered architect</li>
+                            <li>Registered civil/structural engineer</li>
+                            <li>Registered mechanical engineer</li>
+                            <li>Registered electrical engineer</li>
+                            <li><small>
+                                <strong>Minimum of 4 years post professional registration</strong></small>
+                            </li>
                         </ul>
-                        <a href="#" class="borders-btn">Get Started</a>
+                        <a href="{% url 'accreditors:create_account' %}" class="borders-btn">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -271,7 +232,7 @@
                     <div class="section-tittle section-tittle2 mb-30">
                         <h2>About 1</h2>
                     </div>
-                    <p class="mb-40">Supercharge your WordPress hosting with detailed website analytics, marketing tools. Our experts are just part of the reason Bluehost is the ideal home for your WordPress website. We're here to help you succeed!</p>
+                    {% comment %} <p class="mb-40">Supercharge your WordPress hosting with detailed website analytics, marketing tools. Our experts are just part of the reason Bluehost is the ideal home for your WordPress website. We're here to help you succeed!</p>
                     <ul>
                         <li>
                             <img src="assets/img/icon/right.svg" alt="">
@@ -285,7 +246,7 @@
                             <img src="assets/img/icon/right.svg" alt="">
                             <p> Detailed website analytics</p>
                         </li>
-                    </ul>
+                    </ul> {% endcomment %}
                 </div>
             </div>
         </div>
@@ -304,7 +265,7 @@
                     <div class="section-tittle section-tittle2 mb-30">
                         <h2>About 2</h2>
                     </div>
-                    <p class="mb-40">Supercharge your WordPress hosting with detailed website analytics, marketing tools. Our experts are just part of the reason Bluehost is the ideal home for your WordPress website. We're here to help you succeed!</p>
+                    {% comment %} <p class="mb-40">Supercharge your WordPress hosting with detailed website analytics, marketing tools. Our experts are just part of the reason Bluehost is the ideal home for your WordPress website. We're here to help you succeed!</p>
                     <ul class="mb-30">
                         <li>
                             <img src="assets/img/icon/right.svg" alt="">
@@ -315,7 +276,7 @@
                             <p>Our experts are just part of the reason</p>
                         </li>
                     </ul>
-                    <a href="#" class="btn"><i class="fas fa-phone-alt"></i>(10) 892-293 2678</a>
+                    <a href="#" class="btn"><i class="fas fa-phone-alt"></i>(10) 892-293 2678</a> {% endcomment %}
                 </div>
             </div>
             <div class="col-xl-5 col-lg-5 col-md-8 col-sm-10">
@@ -338,7 +299,7 @@
                 <!-- Section Tittle -->
                 <div class="section-tittle text-center mb-90">
                     <h2>Frequently ask questions</h2>
-                    <p>Supercharge your WordPress hosting with detailed website analytics, marketing tools. Our experts are just part of the reason Bluehost is the ideal home for your WordPress website. We're here to help you succeed!</p>
+                    <p></p>
                 </div>
             </div>
         </div>
@@ -347,8 +308,10 @@
                 <div class="single-question d-flex mb-50">
                     <span> Q.</span>
                     <div class="pera">
-                        <h2>Why can't people connect to the web server on my PC?</h2>
-                        <p>We operate one of the most advanced 100 Gbit networks in the world, complete with Anycast support and extensive DDoS protection.</p>
+                        <h2>What is CAP?</h2>
+                        <p>
+                            Certified Accreditor Program (CAP) is an initiative designed to enable the Lagos State Government engage private sector professional as stakeholders in regulating the built environment. These partners will be known as Certified Accreditors (CAs). CAs will work with the Ministry and its Agencies, LASPPPA & LASBCA to do the following;
+                        </p>
                     </div>
                 </div>
             </div>
@@ -356,8 +319,8 @@
                 <div class="single-question d-flex mb-50">
                     <span> Q.</span>
                     <div class="pera">
-                        <h2>What domain name should I choose for my site?</h2>
-                        <p>We operate one of the most advanced 100 Gbit networks in the world, complete with Anycast support and extensive DDoS protection.</p>
+                        <h2>How can I become a Certified Accreditor (CA)?</h2>
+                        <p>A Certified Accreditor (CA) is a group of professionals that come together to form a Consortium. All CAs must have a minimum of 4 Registered Professionals depending on the grade</p>
                     </div>
                 </div>
             </div>
@@ -365,8 +328,9 @@
                 <div class="single-question d-flex mb-50">
                     <span> Q.</span>
                     <div class="pera">
-                        <h2>How can I make my website work without www. in front?</h2>
-                        <p>We operate one of the most advanced 100 Gbit networks in the world, complete with Anycast support and extensive DDoS protection.</p>
+                        <h2>Can an already existing / registered Company register as a CA?</h2>
+                        <p>Yes, the Firm only need to provide proof having the required professionals as members of the Firm
+                        </p>
                     </div>
                 </div>
             </div>
@@ -374,8 +338,17 @@
                 <div class="single-question d-flex mb-50">
                     <span> Q.</span>
                     <div class="pera">
-                        <h2>Why does Internet Information Server want a password?</h2>
-                        <p>We operate one of the most advanced 100 Gbit networks in the world, complete with Anycast support and extensive DDoS protection.</p>
+                        <h2>Who are the professionals qualified for CAP?</h2>
+                        <p>
+                            i.	A Registered Architect
+                            ii.	A Registered Civil/Structural Engineer 
+                            iii.	A Registered Mechanical Engineer
+                            iv.	A Registered Electrical Engineer
+                            v.	A Registered builder
+                            vi.	A Registered Town Planner
+                            vii.	A Registered Geoscientist
+
+                        </p>
                     </div>
                 </div>
             </div>
