--- a/templates/contact.html
+++ b/templates/contact.html
@@ -105,21 +105,21 @@
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-home"></i></span>
                         <div class="media-body">
-                            <h3>Buttonwood, California.</h3>
-                            <p>Rosemead, CA 91770</p>
+                            <h3>Ministry of Physical Planning & Ubarn Development.</h3>
+                            <p>Alausa, Ikeja Lagos</p>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                         <div class="media-body">
                             <h3>+1 253 565 2365</h3>
-                            <p>Mon to Fri 9am to 6pm</p>
+                            <p>Mon to Fri 9am to 4pm</p>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-email"></i></span>
                         <div class="media-body">
-                            <h3>support@colorlib.com</h3>
+                            <h3>capmppud@lagosstate.gov.ng</h3>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
