changes to name

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-5 col-lg-5 col-md-9">
                         <div class="hero__caption">
-                            <span data-animation="fadeInLeft" data-delay=".3s">Ministry of Physical Planning & Ubarn Development</span>
+                            <span data-animation="fadeInLeft" data-delay=".3s">Ministry of Physical Planning & Urban Development</span>
                             <h1 data-animation="fadeInLeft" data-delay=".6s ">Welcome to CAP</h1>
                             <p data-animation="fadeInLeft" data-delay=".8s">Building Better for a Greater LAGOS</p>
                             <!-- Slider btn -->
