--- a/templates/base.html
+++ b/templates/base.html
@@ -248,7 +248,7 @@
                                 <div class="footer-copy-right text-center">
                                     <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                         Copyright &copy;<script>document.write(new Date().getFullYear());</script> 
-                                        All rights reserved | by <a href="#">Lagos State Ministry of Physcial Planning & Ubarn Development</a>
+                                        All rights reserved | by <a href="#">Lagos State Ministry of Physcial Planning & Urban Development</a>
                                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                     </p>
     
