--- a/templates/contact.html
+++ b/templates/contact.html
@@ -105,7 +105,7 @@
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-home"></i></span>
                         <div class="media-body">
-                            <h3>Ministry of Physical Planning & Ubarn Development.</h3>
+                            <h3>Ministry of Physical Planning & Urban Development.</h3>
                             <p>Alausa, Ikeja Lagos</p>
                         </div>
                     </div>
