--- a/templates/help.html
+++ b/templates/help.html
@@ -60,10 +60,10 @@
                                 A Certified Accreditor (CA) is a group of professionals that come together to form a Consortium. All CAs must have a minimum of 4 Registered Professionals depending on the grade
                             </p>
                             <ul class="custom-ul">
-                                <li>A Registered Architect     (compulsory)</li>
+                                <li>A Registered Architect (compulsory)</li>
                                 <li>A Registered Civil/Structural Engineer  (compulsory)</li>
-                                <li>A Registered Mechanical Engineer      (compulsory)</li>
-                                <li>A Registered Electrical Engineer        (compulsory)</li>
+                                <li>A Registered Mechanical Engineer (compulsory)</li>
+                                <li>A Registered Electrical Engineer (compulsory)</li>
                                 Registered Builder
                                 <li>A Registered Town Planner</li>
                                 <li>A Registered Geoscientist</li>
@@ -128,7 +128,7 @@
                         <div class="pera">
                             <h2>What is the registration fee for CAP?</h2>
                             <p>
-                                Yearly registration fee ranging from N50,000 and N200,000 depending on the Grade.
+                                ₦200,000.00 to ₦500,000.00 yearly depending on the Grade.
                             </p>
                         </div>
                     </div>
