--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-9 ">
                         <div class="hero__caption">
-                            <span data-animation="fadeInLeft" data-delay=".3s">Ministry of Physical Planning & Ubarn Development</span>
+                            <span data-animation="fadeInLeft" data-delay=".3s">Ministry of Physical Planning & Urban Development</span>
                             <h1 data-animation="fadeInLeft" data-delay=".6s">Welcome to CAP</h1>
                             <p data-animation="fadeInLeft" data-delay=".8s">Building Better for a Greater LAGOS</p>
                             <!-- Slider btn -->
